k8s-cilium-envoy/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-app
  namespace: poc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poc-app
  template:
    metadata:
      labels:
        app: poc-app
    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: poc-app
  namespace: poc
spec:
  selector:
    app: poc-app
  ports:
    - name: http
      port: 8080
      targetPort: 80
